src/test/ui/proc-macro/attr-stmt-expr.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/attr-stmt-expr.rs:19:5
   |
LL |     #[expect_print_expr]
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/attr-stmt-expr.rs:55:5
   |
LL |     #[expect_expr]
   |     ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
